Revise About Me section with career highlights

--- a/index.html
+++ b/index.html
@@ -127,13 +127,18 @@
             <!-- About Section -->
             <section id="about" class="tab-section bg-gray-800 rounded-xl p-8 shadow-2xl glowing-border mb-12">
                 <h2 class="text-2xl font-bold text-purple-300 mb-4 glitch-text" data-text="About Me">About Me</h2>
-                <p class="text-gray-300 leading-relaxed">
-                   For over a decade, I've been a web application developer focused on one thing: creating effective solutions for people and businesses. I see programming languages not as a defining identity, but as powerful tools to solve complex challenges.
+                <p class="text-gray-300 leading-relaxed"><b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">In February 2017</b>, I was given the opportunity to work for a visionary team, an experience that transformed not only my own journey but also reshaped the perception of the people about receiving their shipments right at their convenience.</p>
+                <br>
+                <p class="text-gray-300 leading-relaxed">Back then, the product was still in its early prototype stage. Inspired by the principles of <b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">KAIZEN (continuous improvement)</b>, I embraced multiple roles: front-end and back-end engineering, operations coordinator, solutions architect, tech support, and web/app designer. This was before the widespread adoption of AI, so wearing many hats wasn’t just a choice, it was a necessity.</p>
+                <br>
+                <p class="text-gray-300 leading-relaxed">Every day brought new challenges and valuable lessons. Even in the face of market obstacles, we pushed forward and built something truly unique. Those late nights spent building and experimenting were about more than just technology, they were proof that with relentless commitment, a simple idea can become a <b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">scalable and successful business model</b>.</p>
+                <br>
+                <p class="text-gray-300 leading-relaxed">Our efforts didn’t just stay small. We helped major players like <b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">Amazon and DHL</b> expand their logistics radius, and today the network is live across the <b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">entire GCC</b> region. <b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">In 2023</b>, our journey reached a new milestone when we were <b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">acquired by Emirates Post UAE</b> to become an integral part of their <b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">PUDO network</b>, a validation of the impact and value we created.</p>
+                <br>
+                <p class="text-gray-300 leading-relaxed">Being part of this journey and witnessing its transformation from the ground up into a robust network stands as one of the proudest achievements of my career. What excites me most is the road ahead, a future defined by <b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">innovation, accessibility, and sustainability</b>. With <b class="text-gray-300 leading-relaxed  font-bold text-purple-300 mb-4 glitch-text">NXN</b>, this is only the beginning.</p>
+                <br>
+                <h2 class="text-gray-300 leading-relaxed text-xl font-bold text-purple-300 mb-4 glitch-text">This journey also shaped my biggest strength: the ability to take an idea from concept to execution, bridging technology, operations, and business strategy to build solutions that scale.</h2>
 
-My expertise is in architecting and implementing robust systems that are tailored to the specific needs of a project. I'm driven by the desire to build impactful solutions and contribute to the developer community, as demonstrated by my active participation on Stack Overflow.
-
-
-                </p>
             </section>
 
             <!-- Skills & Expertise Section -->
