--- a/index.html
+++ b/index.html
@@ -92,8 +92,21 @@
             100% { background-position: 0% 0%; }
         }
     </style>
+
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-52Z9DSL7');</script>
+<!-- End Google Tag Manager -->
+    
 </head>
 <body class="bg-gray-900 text-white min-h-screen flex flex-col items-center p-4">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-52Z9DSL7"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <div class="w-full max-w-4xl mx-auto py-12">
         <!-- Header Section -->
@@ -458,7 +471,7 @@
                         </div>
                         <div class="flex items-center space-x-4">
                             <img src="https://placehold.co/32x32/8B5CF6/FFFFFF?text=L" alt="LinkedIn Icon" class="w-8 h-8 rounded-full">
-                            <a href="https://www.linkedin.com/in/wajid-abid-khan/" class="text-purple-300 hover:underline" target="_blank">LinkedIn Profile</a>
+                            <a href="https://stackoverflow.com/users/1294231/vaimeo" class="text-purple-300 hover:underline" target="_blank">LinkedIn Profile</a>
                         </div>
                         <div class="flex items-center space-x-4">
                             <img src="https://placehold.co/32x32/1E90FF/FFFFFF?text=SO" alt="Stack Overflow Icon" class="w-8 h-8 rounded-full">
