--- a/index.html
+++ b/index.html
@@ -551,11 +551,11 @@
                         </div>
                         <div class="flex items-center space-x-4">
                             <img src="https://placehold.co/32x32/8B5CF6/FFFFFF?text=L" alt="LinkedIn Icon" class="w-8 h-8 rounded-full">
-                            <a href="https://stackoverflow.com/users/1294231/vaimeo" class="text-purple-300 hover:underline" target="_blank">LinkedIn Profile</a>
+                            <a href="https://www.linkedin.com/in/vaimeo" class="text-purple-300 hover:underline" target="_blank">LinkedIn Profile</a>
                         </div>
                         <div class="flex items-center space-x-4">
                             <img src="https://placehold.co/32x32/1E90FF/FFFFFF?text=SO" alt="Stack Overflow Icon" class="w-8 h-8 rounded-full">
-                            <a href="https://stackoverflow.com/users/838126/wajid-abid-khan" class="text-blue-500 hover:underline" target="_blank">Stack Overflow Profile</a>
+                            <a href="https://stackoverflow.com/users/1294231/vaimeo" class="text-blue-500 hover:underline" target="_blank">Stack Overflow Profile</a>
                         </div>
                     </div>
                 </div>
